--- a/webDev.css
+++ b/webDev.css
@@ -172,6 +172,7 @@ p{
     border-style: solid;
     border-width: 10px;
     border-radius: 50px;
+    margin-bottom: 50px;
 }
 
 #topHalf{
